// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search (unit tests) when is disabled should match the snapshot 1`] = `
<kv-search input-disabled="" input-mask-regex="" placeholder="Search" state="none" type="text" value="">
  <template shadowrootmode="open">
    <kv-text-field icon="kv-search" inputdisabled="" inputmaskregex="" placeholder="Search" size="large" state="none" type="text" value=""></kv-text-field>
  </template>
</kv-search>
`;

exports[`Search (unit tests) when uses default props should match the snapshot 1`] = `
<kv-search input-mask-regex="" placeholder="Search" state="none" type="text" value="">
  <template shadowrootmode="open">
    <kv-text-field icon="kv-search" inputmaskregex="" placeholder="Search" size="large" state="none" type="text" value=""></kv-text-field>
  </template>
</kv-search>
`;

exports[`Search (unit tests) when value is changed should match the snapshot 1`] = `
<kv-search input-mask-regex="" placeholder="Search" state="none" type="text" value="Teste">
  <template shadowrootmode="open">
    <kv-text-field actionicon="kv-close" icon="kv-search" inputmaskregex="" placeholder="Search" size="large" state="none" type="text" value="Teste"></kv-text-field>
  </template>
</kv-search>
`;
